Security against infinite loops and attempts to change securityManager